app/projects/[slug]/components/main/styles.module.css
.main {
  background-color: var(--mantine-color-white);
  color: var(--mantine-color-black);
  height: 100%;
  position: relative;

  @mixin dark {
    background-color: var(--mantine-color-white);
    color: var(--mantine-color-black);
  }
}

.project-not-found-container {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 16px;
  height: 100%;
  justify-content: center;
}

.banner-container {
  height: 480px;
  position: relative;
}

.banner {
  height: 100%;
  object-fit: cover;
  width: 100%;
}

.back-button-container {
  left: 0;
  margin: 0 auto;
  max-width: 1440px;
  padding: 0 var(--mantine-spacing-xl);
  position: absolute;
  right: 0;
  top: 24px;
}

.back-button {
  background-color: #ffffff;
  color: #000000;
  opacity: 0.7;
}

.logo-container {
  bottom: -84px;
  left: 0;
  margin: 0 auto;
  max-width: 1440px;
  padding: 0 var(--mantine-spacing-xl);
  position: absolute;
  right: 0;
}

.logo {
  border: 9px solid var(--mantine-color-white);
  border-radius: 56px;
  height: 168px;
  width: 168px;
}

.container {
  margin: 0 auto;
  max-width: 1440px;
  padding: 108px var(--mantine-spacing-xl) 0;

  @mixin dark {
    background-color: var(--mantine-color-white);
    color: var(--mantine-color-black);
  }
}

.name-row {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin-bottom: var(--mantine-spacing-md);
}

.name-group,
.link-group {
  align-items: center;
  display: flex;
  flex-wrap: nowrap;
  gap: 8px;
}

.name {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.stage {
  background-color: rgba(200, 253, 124, 1);
  border-radius: var(--mantine-radius-sm);
  color: #000000;
  flex-shrink: 0;
}

.link-group {
  gap: 18px;
}

.icon {
  color: #fd222a;
  transition-duration: 200ms;
  transition-property: transform, opacity;
  transition-timing-function: ease;
}

.icon:hover {
  opacity: 0.7;
  transform: scale(1.1);
}

.menu-dropdown {
  background-color: var(--mantine-color-white);
  border-color: var(--mantine-color-gray-2);
  color: var(--mantine-color-black);
}

.divider {
  border-color: var(--mantine-color-gray-3);
}

.menu-item {
  background-color: var(--mantine-color-white);
  color: var(--mantine-color-black);
}

.menu-item:hover {
  background-color: var(--mantine-color-gray-2);
}

.menu-item-warning {
  color: var(--mantine-color-red-6);
}

.info-row,
.chain-row {
  align-items: center;
  display: flex;
  gap: 16px;
  margin-bottom: var(--mantine-spacing-md);
}

.info {
  align-items: center;
  display: flex;
  gap: 8px;
}

.lable {
  color: rgba(61, 61, 60, 1);
}

.text {
  font-weight: bold;
}

.chain-row {
  margin-bottom: 48px;
}

.desc {
  padding: var(--mantine-spacing-md) 0;
}

.swiper-container {
  height: 480px;
  margin: var(--mantine-spacing-xl) 0;
}

.swiper {
  height: 100%;
}

.preview-image {
  border-radius: var(--mantine-radius-md);
  height: 480px;
  object-fit: cover;
  width: 100%;
}

.recommendation-title {
  margin: var(--mantine-spacing-xl) 0;
}

